--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
             android:id="@+id/root_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#D8009FB2">
+            android:background="@color/colorPrimary">
 
 
 
@@ -25,7 +25,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:src="@drawable/weatherimage"
+                android:src="@drawable/weather"
                 app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +66,7 @@
                         android:hint="Email"
                         android:textColor="#383838"
                         android:textSize="20sp"
-                        app:backgroundTint="@color/colorPrimaryDark" />
+                        app:backgroundTint="@color/edittexttint" />
 
             </LinearLayout>
 
@@ -92,7 +92,7 @@
                         android:paddingLeft="5dp"
                         android:textColor="#383838"
                         android:textSize="20sp"
-                        app:backgroundTint="@color/colorPrimaryDark" />
+                        app:backgroundTint="@color/edittexttint" />
 
             </LinearLayout>
 
